src/css/custom.css
/* Adjusting dates presentation */
.fn-gantt .custom_days .date {
	border-bottom: none;
}
.fn-gantt .custom_days .day {
	line-height: 11px;
}
.fn-gantt .custom_days .day {
	line-height: 11px;
}
.fn-gantt .custom_DScale_days.row, .fn-gantt .custom_days .day.row {
	height: 18px;
}
.fn-gantt .custom_days .date.row {
	padding-top: 5px;
	height: 20px;
	line-height: 15px;
}
.fn-gantt .custom_days .custom_DScale_dates {
	height: 20px;
	line-height: 15px;
}
.fn-gantt .dataPanel {
	background-image: none;
}
.fn-gantt .wd {
	background-color: initial;
}
.fn-gantt .rightPanel .month, .fn-gantt .rightPanel .year {
	background-color: initial;
}
.fn-gantt .custom_days .day, .fn-gantt .custom_days .date {
	width: auto;
}
.fn-gantt .custom_months .day {
	width: auto;
	font-size: 12px;
}
.fn-gantt .rightPanel .year, .fn-gantt .rightPanel .month {
	font-size: 12px;
}
.fn-gantt .custom_weeks .day {
	width: auto;
}

/* Pseudo-Grid styles */
.custom_grid {
	width: 100%;
	height: 6000px;
	position: relative;
	top: 0;
	left: -1px;
	border-left: 1px solid #DDD;
}
.today .custom_grid {
	border-left: 1px dashed rgb(46, 128, 235);
}
.custom_days .custom_grid {
	top: 7px;
}
.sa .custom_grid, .sn .custom_grid {
	background-color: #f5f5f5;
}
.arrow-right {
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 10px solid rgb(46, 128, 235);
  position: absolute;
  left: 0;
  top: 0;
}
.arrow-left {
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent; 
  border-right:10px solid rgb(46, 128, 235);
  position: absolute;
  right: 0;
  top: 0;
}


/* Hint popup */
.fn-gantt-hint {
	border: none;
	padding: 20px;
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
	border-radius: 3px;
	background-color: white;
	font-size: 13px;
	color: rgb(130, 130, 130);
	font-family: Arial;
}
.hint_desc {
	font-weight: bold;
	color: rgb(30, 30, 30);
}
.hint_time {
	padding-top: 10px;
}
.hint_info_block {
	display: flex;
	padding-top: 10px;
}
.hint_info_block p ~ p, .hint_time div ~ p {
	font-weight: normal;
	color: rgb(30, 30, 30);
}
.hint_info_block > div {
	padding: 10px 0 10px 15px;
	min-width: 55px;
}
.hint_time > div {
	display: flex;
	align-items: baseline;
	padding: 0 0 5px 0;
}
.hint_time > div > div:first-child {
	padding: 0 5px 0 0;
}
.planned_legend {
	width: 20px;
	height: 10px;
	background-color: rgb(46, 128, 235);
}
.fact_legend {
	width: 20px;
	height: 10px;
	background-color: rgb(151, 192, 248);
}
.hint_info_block > div:first-child {
	padding-left: 0;
}
.hint_info_block p, .hint_time p {
	margin: 0;
	padding: 0 0 7px 0;
}

/* Settings */
.fn-gantt .bar, .fn-gantt .bar .fn-label {
	height: 10px;
	line-height: 10px;
	margin: 0;
	border-radius: 0;
}
.fn-gantt .bar.ganttPlanned {
	background-color: rgb(46, 128, 235);
}
.fn-gantt .bar.ganttFact {
	background-color: rgb(151, 192, 248);
	z-index: initial;
}
.fn-gantt .bar .fn-label {
	top: -15px;
	position: relative;
	font-size: 12px;
	line-height: 12px;
	height: 15px;
}
.day.today, .date.today {
	color: rgb(46, 128, 235);
}
.fn-gantt .leftPanel, .gantt .bottom {
	display: none;
}
.fn-gantt .dataPanel {
	overflow-y: hidden;
}
.gantt {
	border: none;
	margin: 0;
	font-family: Arial;
	border-top: 2px solid #ddd;
	border-radius: initial;
}
.gantt .row {
	display: block;
}

.container {
	width: 100%;
	margin: 0 auto;
	border: 2px solid #ddd;
}
.scale {
	padding: 20px 0 20px 20px;
}
.scale select {
	padding: 3px 5px;
	outline: none;
	width: 85px;
	height: 23px;
	-webkit-appearance: menulist;
	background: none;
}
body {
	overflow-y: overlay;
}
.fn-gantt .rightPanel {
	overflow-x: scroll;
}

